--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -172,5 +172,6 @@
     <string name="help">Help</string>
     <string name="read_up_to_2k_pro">You can read up to 2000 words per mnute in Pro version</string>
     <string name="i_cant_buy_pro">I can\'t buy Pro</string>
+    <string name="tts_reading_confirm">You can just listen your book with TTS technology (Text to speech). Do you want try it now for free ?</string>
 
 </resources>
